fixed some things

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                         <a class="nav-link me-lg-3" href="#page-top">HOME</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link me-lg-3" href="#projects">projectS</a>
+                        <a class="nav-link me-lg-3" href="#projects">Projects</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link me-lg-3" href="#awards">AWARDS</a>
@@ -115,14 +115,6 @@
         </div>
     </section>
     <!-- Top Section -->
-
-    <!-- Photo -->
-    <div class="container px-5">
-        <div id="avatar">
-            <img class="shadow" src="static/assets/img/photo.png">
-        </div>
-    </div>
-    <!-- Photo -->
     
     <!-- Home -->
     <section class="bg-gradient-primary-to-secondary-light mt5 md5" id="home">
@@ -140,7 +132,7 @@
     <section class="bg-gradient-primary-to-secondary-gray mt5 md5" id="projects">
         <div class="container px-5">
             <header>
-                <h2 id="projects-subtitle"><i class="bi bi-file-text-fill"></i>&nbsp;projectS</h2>
+                <h2 id="projects-subtitle"><i class="bi bi-file-text-fill"></i>&nbsp;Projects</h2>
             </header>
             <div class="main-body" id="projects-md"></div>
 
