changed projects to research experience

--- a/index.html
+++ b/index.html
@@ -86,19 +86,19 @@
             <!-- <a href="#page-top"><img src="static/assets/img/CUMT_LOGO.svg" style="width: 11rem;"></a> -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                MENU
+                Menu
                 <i class="bi-list"></i>
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto me-4 my-3 my-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link me-lg-3" href="#page-top">HOME</a>
+                        <a class="nav-link me-lg-3" href="#page-top">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link me-lg-3" href="#projects">Projects</a>
+                        <a class="nav-link me-lg-3" href="#projects">Research Experience</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link me-lg-3" href="#awards">AWARDS</a>
+                        <a class="nav-link me-lg-3" href="#awards">Awards</a>
                     </li>
 
                 </ul>
@@ -123,7 +123,7 @@
     <section class="bg-gradient-primary-to-secondary-gray mt5 md5" id="projects">
         <div class="container px-5">
             <header>
-                <h2 id="projects-subtitle"><i class="bi bi-file-text-fill"></i>&nbsp;Projects</h2>
+                <h2 id="projects-subtitle"><i class="bi bi-file-text-fill"></i>&nbsp;Research Experience</h2>
             </header>
             <div class="main-body" id="projects-md"></div>
 
