--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
                     <li class="nav-item">
                         <a class="nav-link me-lg-3" href="#projects">Research Experience</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link me-lg-3" href="#awards">Awards</a>
-                    </li>
+                    </li> -->
 
                 </ul>
             </div>
